--- a/MechaStick Fighter/Whats up.html
+++ b/MechaStick Fighter/Whats up.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
+<base href="https://cdn.jsdelivr.net/gh/BBTVR/MechaStick-Fighters@main/MechaStick%20Fighter/">
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity Web Player | MechaStick Fighter</title>
